# Django_plus_stepik

./: .env  README.md  pyproject.toml
django_orm/: asgi.py  settings.py  urls.py  wsgi.py
hr/: models.py  urls.py  views.py
hr/migrations/: 0001_initial.py  0002_contact_employee_contact.py  0003_department_employee_department.py  0004_compensation_employee_compensations.py  0005_employee_age_employee_created_and_more.py
templates/: list.html
