[tool.poetry]
name = "django-orm"
version = "0.1.0"
description = ""
authors = ["lana_remenyuk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
python-dotenv = "^1.0.1"
psycopg = "^3.2.1"
django-extensions = "^3.2.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
